src/resources/scss/pages/requests/requests.scss
// loading configuration
@use '../../configuration/themes' as *;

// loading EcoComposer components
@use '../../components/accordion/accordion';
@use '../../components/tabs/tabs';
@use '../../components/table/table';
@use '../../components/theming/theming';

// loading partials
@use '../../partials/profiler/index';

// configuring components
@include theming.init-themes($themes);
@include accordion.create(
  (
    'themes': $themes
  )
);
@include table.init();
@include table.create(
  (
    'desktop--td-padding' : 1rem,
    'themes': $themes
  )
);
@include tabs.create(
  (
    'count' : 4,
    'themes' : $themes,
    'border-radius' : 0 0 .5rem .5rem
  )
);

#requests-container {
  // box
  box-sizing : border-box;
  padding    : 2rem;
  // the following combination prevent to go outside the screen but taking all the space available in the flex container
  flex-grow : 1;
  width     : min-content;

  // text
  font-size  : 1.6rem;
  // word-break is not supported by IE!
  @supports (word-break: break-word) {
    word-break : break-word;
  }

  @at-root {
    .accordion--block {
      @include theming.to-theme(
        (
          #{&} : ('box-shadow', 'profiler--requests--accordion-box--box-shadow')
        )
      );

      margin : 0 .1rem;

      @at-root #requests-container tr:nth-child(2n),
      #requests-container .table-header > tr {
        background-color : rgb(96 138 255 / 15%);
      }

      @at-root #requests-container table {
        width : 100%;
      }

      @at-root #requests-container th {
        padding : 1rem;
      }

      @at-root #requests-container td,
      #requests-container td::before {
        min-width : 8rem;
      }

      @at-root .requests--parameter--string {
        @include theming.to-theme(
          (
            #{&} : ('color', 'profiler--requests--parameter--string--color')
          )
        );
      }
    }
  }
}

// applying theme
@include theming.global-mass-theme();

